--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "express": "^4.17.1",
     "react": "^17.0.1",
+    "react-bulma-components": "^3.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
@@ -36,5 +37,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
