--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "data-store": "^4.0.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "firebase-admin": "^9.4.1",
     "jquery": "^3.5.1"
   },
   "devDependencies": {
